--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,112 +3,91 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
+@article{yang2014aggregation,
+  title={Aggregation increases prey survival time in group chase and escape},
+  author={Yang, Sicong and Jiang, Shijie and Jiang, Li and Li, Geng and Han, Zhangang},
+  journal={New Journal of Physics},
+  volume={16},
   number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+  pages={083006},
+  year={2014},
+  publisher={IOP Publishing}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{jiang2014obstacle,
+  title={Obstacle optimization for panic flow-reducing the tangential momentum increases the escape speed},
+  author={Jiang, Li and Li, Jingyu and Shen, Chao and Yang, Sicong and Han, Zhangang},
+  journal={PloS one},
+  volume={9},
+  number={12},
+  pages={e115463},
+  year={2014},
+  publisher={Public Library of Science}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{姜立2015拥挤系统阻碍物位置的遗传算法优化,
+  title={拥挤系统阻碍物位置的遗传算法优化},
+  author={姜立 and 韩战钢},
+  journal={北京师范大学学报: 自然科学版},
+  number={2},
+  pages={144--147},
+  year={2015}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@article{jingyu2016human,
+  title={Human Experiments for Optimizing Obstacles Settings in a Crowd System},
+  author={Jingyu, LI and Li, JIANG and Chao, SHEN and Chen, YU and Zhangang, HAN},
+  journal={Complex Systems and Complexity Science},
+  volume={13},
+  number={2},
+  pages={22--26},
+  year={2016}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{jiang2017identifying,
+  title={Identifying influential neighbors in animal flocking},
+  author={Jiang, Li and Giuggioli, Luca and Perna, Andrea and Escobedo, Ram{\'o}n and Lecheval, Valentin and Sire, Cl{\'e}ment and Han, Zhangang and Theraulaz, Guy},
+  journal={PLoS computational biology},
+  volume={13},
+  number={11},
+  pages={e1005822},
+  year={2017},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{crosato2018informative,
+  title={Informative and misinformative interactions in a school of fish},
+  author={Crosato, Emanuele and Jiang, Li and Lecheval, Valentin and Lizier, Joseph T and Wang, X Rosalind and Tichit, Pierre and Theraulaz, Guy and Prokopenko, Mikhail},
+  journal={Swarm Intelligence},
+  volume={12},
+  pages={283--305},
+  year={2018},
+  publisher={Springer US}
+}
+
+@article{lecheval2017domino,
+  title={Domino-like propagation of collective U-turns in fish schools},
+  author={Lecheval, Valentin and Jiang, Li and Tichit, Pierre and Sire, Cl{\'e}ment and Hemelrijk, Charlotte K and Theraulaz, Guy},
+  journal={BioRxiv},
+  pages={138628},
+  year={2017},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{lecheval2018social,
+  title={Social conformity and propagation of information in collective U-turns of fish schools},
+  author={Lecheval, Valentin and Jiang, Li and Tichit, Pierre and Sire, Cl{\'e}ment and Hemelrijk, Charlotte K and Theraulaz, Guy},
+  journal={Proceedings of the Royal Society B: Biological Sciences},
+  volume={285},
+  number={1877},
+  pages={20180251},
+  year={2018},
+  publisher={The Royal Society}
+}
+
+@article{wu2023autogen,
+  title={Autogen: Enabling next-gen llm applications via multi-agent conversation framework},
+  author={Wu, Qingyun and Bansal, Gagan and Zhang, Jieyu and Wu, Yiran and Zhang, Shaokun and Zhu, Erkang and Li, Beibin and Jiang, Li and Zhang, Xiaoyun and Wang, Chi},
+  journal={arXiv preprint arXiv:2308.08155},
+  year={2023}
 }
