Update selected papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,7 +22,8 @@
   number={12},
   pages={e115463},
   year={2014},
-  publisher={Public Library of Science}
+  publisher={Public Library of Science},
+  selected = {true}
 }
 
 @article{姜立2015拥挤系统阻碍物位置的遗传算法优化,
@@ -52,7 +53,8 @@
   number={11},
   pages={e1005822},
   year={2017},
-  publisher={Public Library of Science San Francisco, CA USA}
+  publisher={Public Library of Science San Francisco, CA USA},
+  selected = {true}
 }
 
 @article{crosato2018informative,
@@ -89,5 +91,6 @@
   title={Autogen: Enabling next-gen llm applications via multi-agent conversation framework},
   author={Wu, Qingyun and Bansal, Gagan and Zhang, Jieyu and Wu, Yiran and Zhang, Shaokun and Zhu, Erkang and Li, Beibin and Jiang, Li and Zhang, Xiaoyun and Wang, Chi},
   journal={arXiv preprint arXiv:2308.08155},
-  year={2023}
+  year={2023},
+  selected = {true}
 }
